# duckdb-teradata

./: CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  install_teradata.py
.github/workflows/: Linux.yml  MainDistributionPipeline.yml
src/: teradata_catalog.cpp  teradata_catalog.hpp  teradata_catalog_set.cpp  teradata_catalog_set.hpp  teradata_clear_cache.cpp  teradata_clear_cache.hpp  teradata_column_reader.cpp  teradata_column_reader.hpp  teradata_column_writer.cpp  teradata_column_writer.hpp  teradata_common.cpp  teradata_common.hpp  teradata_connection.cpp  teradata_connection.hpp  teradata_delete_update.cpp  teradata_delete_update.hpp  teradata_execute.cpp  teradata_execute.hpp  teradata_extension.cpp  teradata_extension.hpp  teradata_filter.cpp  teradata_filter.hpp  teradata_index.cpp  teradata_index.hpp  teradata_index_entry.cpp  teradata_index_entry.hpp  teradata_index_set.cpp  teradata_index_set.hpp  teradata_insert.cpp  teradata_insert.hpp  teradata_query.cpp  teradata_query.hpp  teradata_request.cpp  teradata_request.hpp  teradata_result.hpp  teradata_scan.cpp  teradata_scan.hpp  teradata_schema_entry.cpp  teradata_schema_entry.hpp  teradata_schema_set.cpp  (+14 more)
src/include/: teradata_catalog.hpp  teradata_common.hpp  teradata_connection.hpp  teradata_extension.hpp  teradata_scan.hpp  teradata_secret.hpp  teradata_storage.hpp  teradata_transaction.hpp  teradata_transcation_manager.hpp
src/teradata/: coperr.h  coptypes.h  dbcarea.h  parcel.h
src/util/: binary_reader.hpp
test/sql/: basic.test  td_connect.test
test/sql/teradata/: ctas.test  filter_pushdown.test  index.test  primary_key.test  td_query.test  teradata_delete.test  teradata_secret.test  teradata_update.test
test/sql/teradata/types/: binary.test  character.test  date.test  decimal.test  float.test  integer.test  time.test  timestamp.test  timestamptz.test  timetz.test
